--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body class="bg-slate-50">
     <div id="root"></div>
     
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/main.tsx"></script>
   </body>
 </html>
